--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
   
     <!-- Using Local Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
+    <!--<link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />-->
   
     <!-- Css simplebar -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
