--- a/server/index.html
+++ b/server/index.html
@@ -90,10 +90,10 @@ button{
         <input id="message" type="text" placeholder="Message" />
         <button id="send">Send</button>
     </div>
-    <!--<script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
-    </script>-->
+    </script>
 </body>
 <script src="/chat.js"></script>
 </html>
